--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ my_admin/migrations/0007_auto_20180619_0614.py
 my_admin/migrations/0008_auto_20180619_1104.py
 ubskin_web_django/item/migrations/0001_initial.py
 ubskin_web_django/member/migrations/0001_initial.py
+ubskin_web_django/item/migrations/0002_auto_20180625_0323.py
+ubskin_web_django/member/migrations/0002_auto_20180625_0323.py
+ubskin_web_django/order/migrations/0001_initial.py
