完成扫码登录API， 完成获取商家API， 完成数据提交API， 完成对用户是否为工作人员控制API

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,31 @@ ubskin_web_django/member/migrations/0002_auto_20180625_0323.py
 ubskin_web_django/order/migrations/0001_initial.py
 ubskin_web_django/item/migrations/0003_auto_20180625_0547.py
 ubskin_web_django/member/migrations/0003_auto_20180625_0547.py
+ubskin_web_django/item/migrations/0004_auto_20180626_0815.py
+ubskin_web_django/item/migrations/0005_auto_20180626_0815.py
+ubskin_web_django/item/migrations/0006_auto_20180626_0816.py
+ubskin_web_django/item/migrations/0007_auto_20180626_0817.py
+ubskin_web_django/item/migrations/0008_auto_20180626_0830.py
+ubskin_web_django/item/migrations/0009_auto_20180626_0920.py
+ubskin_web_django/item/migrations/0010_auto_20180626_0925.py
+ubskin_web_django/item/migrations/0011_auto_20180626_0931.py
+ubskin_web_django/item/migrations/0012_auto_20180626_0933.py
+ubskin_web_django/item/migrations/0013_auto_20180626_0940.py
+ubskin_web_django/item/migrations/0014_auto_20180626_1104.py
+ubskin_web_django/member/migrations/0004_auto_20180626_0815.py
+ubskin_web_django/member/migrations/0005_auto_20180626_0815.py
+ubskin_web_django/member/migrations/0006_auto_20180626_0816.py
+ubskin_web_django/member/migrations/0007_auto_20180626_0817.py
+ubskin_web_django/member/migrations/0008_auto_20180626_0830.py
+ubskin_web_django/member/migrations/0009_auto_20180626_0920.py
+ubskin_web_django/member/migrations/0010_auto_20180626_0925.py
+ubskin_web_django/member/migrations/0011_auto_20180626_0931.py
+ubskin_web_django/member/migrations/0012_auto_20180626_0933.py
+ubskin_web_django/member/migrations/0013_auto_20180626_0940.py
+ubskin_web_django/member/migrations/0014_auto_20180626_1104.py
+ubskin_web_django/order/migrations/0002_auto_20180626_0920.py
+ubskin_web_django/order/migrations/0003_auto_20180626_0925.py
+ubskin_web_django/order/migrations/0004_auto_20180626_0931.py
+ubskin_web_django/order/migrations/0005_auto_20180626_0933.py
+ubskin_web_django/order/migrations/0006_auto_20180626_0940.py
+ubskin_web_django/order/migrations/0007_auto_20180626_1104.py
