完成通过物品码查询记录

--- a/conf/vhost_ubskin_dev.conf
+++ b/conf/vhost_ubskin_dev.conf
@@ -3,9 +3,9 @@ server {
   server_name   www-local.ubskin.net;
   client_max_body_size 8m;
   charset utf-8;
-  #access_log  /var/log/nginx/ubskin.local.access_log main;
+  # access_log  /var/log/nginx/ubskin.local.access_log main;
   # error_log   /usr/local/var/log/nginx/ubskin.local.error_log info;
-  gzip_types text/plain application/x-javascript text/css text/javascript application/x-httpd-php application/json text/json image/jpeg image/gif image/png application/octet-stream;
+  # gzip_types text/plain application/x-javascript text/css text/javascript application/x-httpd-php application/json text/json image/jpeg image/gif image/png application/octet-stream;
 
   location / {
     include uwsgi_params; # 导入一个Nginx模块他是用来和uWSGI进行通讯的
