--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,109 @@
-my_admin/migrations/0004_auto_20180619_0332.py
-my_admin/migrations/0005_auto_20180619_0336.py
-my_admin/migrations/0006_auto_20180619_0407.py
-my_admin/migrations/0007_auto_20180619_0614.py
-my_admin/migrations/0008_auto_20180619_1104.py
-ubskin_web_django/item/migrations/0001_initial.py
-ubskin_web_django/member/migrations/0001_initial.py
-ubskin_web_django/item/migrations/0002_auto_20180625_0323.py
-ubskin_web_django/member/migrations/0002_auto_20180625_0323.py
-ubskin_web_django/order/migrations/0001_initial.py
-ubskin_web_django/item/migrations/0003_auto_20180625_0547.py
-ubskin_web_django/member/migrations/0003_auto_20180625_0547.py
-ubskin_web_django/item/migrations/0004_auto_20180626_0815.py
-ubskin_web_django/item/migrations/0005_auto_20180626_0815.py
-ubskin_web_django/item/migrations/0006_auto_20180626_0816.py
-ubskin_web_django/item/migrations/0007_auto_20180626_0817.py
-ubskin_web_django/item/migrations/0008_auto_20180626_0830.py
-ubskin_web_django/item/migrations/0009_auto_20180626_0920.py
-ubskin_web_django/item/migrations/0010_auto_20180626_0925.py
-ubskin_web_django/item/migrations/0011_auto_20180626_0931.py
-ubskin_web_django/item/migrations/0012_auto_20180626_0933.py
-ubskin_web_django/item/migrations/0013_auto_20180626_0940.py
-ubskin_web_django/item/migrations/0014_auto_20180626_1104.py
-ubskin_web_django/member/migrations/0004_auto_20180626_0815.py
-ubskin_web_django/member/migrations/0005_auto_20180626_0815.py
-ubskin_web_django/member/migrations/0006_auto_20180626_0816.py
-ubskin_web_django/member/migrations/0007_auto_20180626_0817.py
-ubskin_web_django/member/migrations/0008_auto_20180626_0830.py
-ubskin_web_django/member/migrations/0009_auto_20180626_0920.py
-ubskin_web_django/member/migrations/0010_auto_20180626_0925.py
-ubskin_web_django/member/migrations/0011_auto_20180626_0931.py
-ubskin_web_django/member/migrations/0012_auto_20180626_0933.py
-ubskin_web_django/member/migrations/0013_auto_20180626_0940.py
-ubskin_web_django/member/migrations/0014_auto_20180626_1104.py
-ubskin_web_django/order/migrations/0002_auto_20180626_0920.py
-ubskin_web_django/order/migrations/0003_auto_20180626_0925.py
-ubskin_web_django/order/migrations/0004_auto_20180626_0931.py
-ubskin_web_django/order/migrations/0005_auto_20180626_0933.py
-ubskin_web_django/order/migrations/0006_auto_20180626_0940.py
-ubskin_web_django/order/migrations/0007_auto_20180626_1104.py
-ubskin_web_django/item/migrations/0015_auto_20180626_1244.py
-ubskin_web_django/member/migrations/0015_auto_20180626_1244.py
-ubskin_web_django/order/migrations/0008_auto_20180626_1244.py
-ubskin_web_django/item/migrations/0017_auto_20180627_0754.py
-ubskin_web_django/item/migrations/0018_auto_20180627_0754.py
-ubskin_web_django/member/migrations/0017_auto_20180627_0754.py
-ubskin_web_django/member/migrations/0018_auto_20180627_0754.py
-ubskin_web_django/order/migrations/0010_auto_20180627_0754.py
-ubskin_web_django/order/migrations/0011_auto_20180627_0754.py
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+settings_local.py
+db.sqlite3
+ubskin_web_django/item/migrations/
+ubskin_web_django/member/migrations/
+ubskin_web_django/order/migrations/
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
