--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ coverage.xml
 local_settings.py
 settings_local.py
 db.sqlite3
+Pipfile
 ubskin_web_django/item/migrations/
 ubskin_web_django/member/migrations/
 ubskin_web_django/order/migrations/
