--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ Pillow = "==5.0.0"
 mysqlclient = "==1.3.12"
 
 [dev-packages]
+pylint = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
