--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ Django = "==2.0.6"
 uWSGI = "==2.0.17"
 Pillow = "==5.0.0"
 mysqlclient = "==1.3.12"
+django-crontab = "*"
+requests = "*"
 
 [dev-packages]
 pylint = "*"
